--- a/project-management-app/src/app/core/components/footer/footer.component.html
+++ b/project-management-app/src/app/core/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <a [class]="'link-footer'" href="https://github.com/HomyakovaAlena"
       ><img src="/assets/GitHubLogo.png" alt="Github Logo" [height]="'30'"
     /></a>
-    <span>2022</span>
+    <span [class]="'footer__year'">2022</span>
     <a [class]="'link-footer'" href="https://rs.school/angular/"
       ><img src="/assets/rs_school_js.svg" alt="Course Logo" [height]="'30'"
     /></a>
