--- a/project-management-app/src/app/core/components/create-board-item/create-board-item.component.html
+++ b/project-management-app/src/app/core/components/create-board-item/create-board-item.component.html
@@ -1,4 +1,11 @@
-<button mat-stroked-button color="accent" aria-label="icon button with a create_new_folder icon">
-  <mat-icon aria-hidden="false" aria-label="create_new_folder icon" fontIcon="create_new_folder">create_new_folder</mat-icon> Create Board
+<button
+  mat-stroked-button
+  color="accent"
+  aria-label="icon button with a create_new_folder icon"
+  [class]="'button'"
+>
+  <mat-icon aria-hidden="false" aria-label="create_new_folder icon" fontIcon="create_new_folder"
+    >create_new_folder</mat-icon
+  >
+  Create Board
 </button>
-
