--- a/project-management-app/src/app/core/components/footer/footer.component.scss
+++ b/project-management-app/src/app/core/components/footer/footer.component.scss
@@ -5,6 +5,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+
+  &__year {
+    font-size: 14px;
+  }
 }
 
 .link-footer {
