--- a/project-management-app/src/app/core/components/header/header.component.html
+++ b/project-management-app/src/app/core/components/header/header.component.html
@@ -1,8 +1,10 @@
 <mat-toolbar color="primary">
   <header [class]="'header'">
     <div [class]="'header__logo-block'">
-      <mat-icon> terrain</mat-icon>
-      <h1 [innerText]="appTitle"></h1>
+      <a routerLink="/pm-app" routerLinkActive="active" ariaCurrentWhenActive="page" [class]="'header__logo-link'"
+        ><mat-icon> terrain</mat-icon>
+        <h1 [innerText]="appTitle"></h1
+      ></a>
     </div>
     <nav>
       <ul [class]="'header__nav-block'">
