--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -44,6 +44,11 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
 ul {
   list-style-type: none;
+}
+
+a {
+  text-decoration: none;
 }
