feat: add generic modal dialog component, progress-bar component, refactor previous functionality with ngrx library and reactive forms

--- a/project-management-app/src/app/boards/components/boards-list/boards-list.component.html
+++ b/project-management-app/src/app/boards/components/boards-list/boards-list.component.html
@@ -1,4 +1,4 @@
 <h2>Boards List</h2>
 <div class="boards-list">
-  <app-board-preview *ngFor="let board of boardsList" [board]="board"> </app-board-preview>
+  <app-board-preview *ngFor="let board of boardsList" [board]="board" (deleteBoard)="onDelete(board?._id!)"> </app-board-preview>
 </div>
