--- a/project-management-app/src/app/app.component.html
+++ b/project-management-app/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
-<!-- <app-progress-bar></app-progress-bar> -->
+<app-progress-bar *ngIf="isLoading$ | async"></app-progress-bar>
+<!-- <app-modal-confirm *ngIf="isOpenedModal$ | async"></app-modal-confirm> -->
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+
