--- a/project-management-app/src/app/boards/components/board-preview/board-preview.component.html
+++ b/project-management-app/src/app/boards/components/board-preview/board-preview.component.html
@@ -1,7 +1,9 @@
 <mat-card>
-  <div [class]='"board-preview"'>
-    <h2>{{ board?.title }}</h2>
-    <h4>Owner: {{ board?.owner }}</h4>
-    <h4>Users: {{ board?.users }}</h4>
+  <div [class]="'board-preview'" *ngIf="board">
+    <h2>{{ board.title }}</h2>
+    <h4>Owner: {{ board.owner }}</h4>
+    <h4>Users: {{ board.users }}</h4>
+    <h4>Id: {{ board._id }}</h4>
   </div>
+  <button type="button" class="delete" title="delete board" (click)="onDelete()">x</button>
 </mat-card>
