--- a/project-management-app/src/app/boards/components/create-board/create-board.component.html
+++ b/project-management-app/src/app/boards/components/create-board/create-board.component.html
@@ -1,10 +1,61 @@
 <!-- <button mat-raised-button color="accent" type="button">Create Board</button> -->
 
-<form (submit)="onSubmit()">
-  <!-- <mat-form-field> -->
-    <input  type="text" placeholder="board title" [(ngModel)]="boardTitle" name="boardTitle">
-    <input  type="text" placeholder="board owner" [(ngModel)]="boardOwner" name="boardOwner">
-    <input  type="text" placeholder="board users" [(ngModel)]="boardUsers" name="boardUsers">
-  <!-- </mat-form-field> -->
-  <button mat-raised-button color="accent" type="submit">Submit</button>
+<form (ngSubmit)="onSubmit(ngForm)" #ngForm="ngForm" [formGroup]="createBoardForm">
+  <p>
+    <mat-form-field>
+      <mat-label for="title">Board Title: </mat-label>
+      <input
+        matInput
+        id="title"
+        type="text"
+        placeholder="title"
+        name="title"
+        formControlName="title"
+      />
+      <mat-error *ngIf="createBoardForm.get('title')?.errors?.['required']"
+        >Title is required</mat-error
+      >
+    </mat-form-field>
+  </p>
+  <p>
+    <mat-form-field>
+      <mat-label for="owner">Board Owner: </mat-label>
+      <input
+        matInput
+        id="owner"
+        type="text"
+        placeholder="owner"
+        name="owner"
+        formControlName="owner"
+      />
+    </mat-form-field>
+  </p>
+  <p>
+    <mat-form-field>
+      <mat-label for="users">Board Users: </mat-label>
+      <input
+        matInput
+        id="users"
+        type="text"
+        name="users"
+        placeholder="users"
+        formControlName="users"
+      />
+    </mat-form-field>
+  </p>
+
+  <button
+    mat-stroked-button
+    color="primary"
+    aria-label="icon button with a create_new_folder icon"
+    [class]="'button'"
+    ariaCurrentWhenActive="page"
+    type="submit"
+    [disabled]="!createBoardForm.valid"
+  >
+    <mat-icon aria-hidden="false" aria-label="create_new_folder icon" fontIcon="create_new_folder"
+      >create_new_folder</mat-icon
+    >
+    Create Board
+  </button>
 </form>
