--- a/project-management-app/src/app/core/components/create-board-item/create-board-item.component.html
+++ b/project-management-app/src/app/core/components/create-board-item/create-board-item.component.html
@@ -3,6 +3,9 @@
   color="accent"
   aria-label="icon button with a create_new_folder icon"
   [class]="'button'"
+  routerLink="/boards"
+  routerLinkActive="active"
+  ariaCurrentWhenActive="page"
 >
   <mat-icon aria-hidden="false" aria-label="create_new_folder icon" fontIcon="create_new_folder"
     >create_new_folder</mat-icon
