--- a/project-management-app/src/app/core/components/progress-bar/progress-bar.component.html
+++ b/project-management-app/src/app/core/components/progress-bar/progress-bar.component.html
@@ -1,7 +1,1 @@
-<mat-progress-bar
-  [color]='color'
-  [mode]='mode'
-  [value]='value'
-  (DOMContentLoaded)="onDOMContentLoaded()"
->
-</mat-progress-bar>
+<mat-progress-bar [color]="'primary'" [mode]="'indeterminate'"> </mat-progress-bar>
