feat: improve board creation functionality with material dialog and move components to auth module with appropriate route and reactive login-signup form

--- a/project-management-app/src/app/boards/pages/boards-page/boards-page.component.html
+++ b/project-management-app/src/app/boards/pages/boards-page/boards-page.component.html
@@ -1,2 +1,7 @@
-<app-boards-list [boardsList]="boardsList$ | async" (deleteBoard)="deleteBoard($event)"></app-boards-list>
-<app-create-board (createBoard)="createBoard($event)"></app-create-board>
+<div class="container">
+  <app-boards-list
+    [boardsList]="boardsList$ | async"
+    (deleteBoard)="openDialog($event)"
+  ></app-boards-list>
+  <!-- <app-create-board-dialog (createBoard)="createBoard($event)"></app-create-board-dialog> -->
+</div>
