feat: implement authentication and improve board creation functionality with users search component and refactor boards view of the authenticated user

--- a/project-management-app/src/app/auth/components/login/login.component.html
+++ b/project-management-app/src/app/auth/components/login/login.component.html
@@ -2,7 +2,7 @@
   mat-raised-button
   color="accent"
   [class]="'login-button'"
-  routerLink="/auth"
+  routerLink="/auth/login"
   routerLinkActive="active"
   ariaCurrentWhenActive="page"
 >
