--- a/project-management-app/src/app/auth/components/signup/signup.component.html
+++ b/project-management-app/src/app/auth/components/signup/signup.component.html
@@ -1,7 +1,7 @@
 <button
   mat-raised-button
   color="accent"
-  routerLink="/auth"
+  routerLink="/auth/signup"
   routerLinkActive="active"
   ariaCurrentWhenActive="page"
 >
