--- a/project-management-app/src/app/auth/pages/auth/auth.component.html
+++ b/project-management-app/src/app/auth/pages/auth/auth.component.html
@@ -1,4 +1,13 @@
 <div class="container">
-  <app-login-signup-form></app-login-signup-form>
-</div>
+  <div>
+    <h2>SignUp</h2>
+    <app-signup-form></app-signup-form>
+  </div>
 
+  <div>
+    <h2>Login</h2>
+    <app-login-form></app-login-form>
+  </div>
+
+  <div *ngIf="showLoginError$ | async" status="error">Ooops! The login details are incorrect.</div>
+</div>
