--- a/project-management-app/src/app/boards/components/boards-list/boards-list.component.html
+++ b/project-management-app/src/app/boards/components/boards-list/boards-list.component.html
@@ -1,4 +1,9 @@
 <h2>Boards List</h2>
 <div class="boards-list">
-  <app-board-preview *ngFor="let board of boardsList" [board]="board" (deleteBoard)="onDelete(board?._id!)"> </app-board-preview>
+  <app-board-preview
+    *ngFor="let board of boardsList"
+    [board]="board"
+    (deleteBoard)="onDelete(board?._id!)"
+  >
+  </app-board-preview>
 </div>
