--- a/project-management-app/src/app/boards/components/create-board-dialog/create-board-dialog.component.scss
+++ b/project-management-app/src/app/boards/components/create-board-dialog/create-board-dialog.component.scss
@@ -1,8 +1,38 @@
-.ng-valid[required],
-.ng-valid.required {
-  border-right: 5px solid #42a948; /* green */
+// .ng-valid[required],
+// .ng-valid.required {
+//   border-right: 5px solid #42a948; /* green */
+// }
+
+// .ng-invalid:not(form) {
+//   border-right: 5px solid #a94442; /* red */
+// }
+
+.modalContent {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
 }
 
-.ng-invalid:not(form) {
-  border-right: 5px solid #a94442; /* red */
+.description {
+  margin-bottom: 20px;
+}
+
+.owner {
+  margin-bottom: 20px;
+}
+.inputForm {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  width: 100%;
+
+  &__label {
+    width: 30%;
+    display: inline-block;
+  }
+  &__input {
+    width: 30%;
+    display: inline-block;
+  }
 }
