feat: implement user edit and delete user functionality

--- a/project-management-app/src/app/auth/components/edit-profile/edit-profile.component.html
+++ b/project-management-app/src/app/auth/components/edit-profile/edit-profile.component.html
@@ -1,3 +1,10 @@
-<button mat-icon-button color="accent" aria-label="icon button with a person icon">
+<button
+  mat-icon-button
+  color="accent"
+  aria-label="icon button with a person icon"
+  routerLink="/auth/profile"
+  routerLinkActive="active"
+  ariaCurrentWhenActive="page"
+>
   <mat-icon aria-hidden="false" aria-label="person icon" fontIcon="person">person</mat-icon>
 </button>
