refactor: refactor delete user functionality with reused confirmation mat-dialog

--- a/project-management-app/src/app/auth/components/edit-profile-form/edit-profile-form.component.html
+++ b/project-management-app/src/app/auth/components/edit-profile-form/edit-profile-form.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2>Edit profile</h2>
   <form (ngSubmit)="onSubmit(ngForm)" #ngForm="ngForm" [formGroup]="editProfileForm">
     <p>
       <mat-form-field class="input__edit-profile">
@@ -120,7 +121,7 @@
         [class]="'button'"
         ariaCurrentWhenActive="page"
         type="button"
-        (click)="onDelete()"
+        (click)="openDialog()"
       >
         <mat-icon>close</mat-icon> Delete user
       </button>
