--- a/project-management-app/src/app/auth/components/signup-form/signup-form.component.html
+++ b/project-management-app/src/app/auth/components/signup-form/signup-form.component.html
@@ -1,4 +1,6 @@
+
 <div class="container">
+  <h2>Sign Up</h2>
   <form (ngSubmit)="onSubmit(ngForm)" #ngForm="ngForm" [formGroup]="signupForm">
     <p>
       <mat-form-field>
