--- a/project-management-app/src/app/boards/components/boards-list/boards-list.component.html
+++ b/project-management-app/src/app/boards/components/boards-list/boards-list.component.html
@@ -3,7 +3,7 @@
   <app-board-preview
     *ngFor="let board of boardsList"
     [board]="board"
-    (deleteBoard)="onDelete(board?._id!)"
+    (deleteBoard)="onDelete($event)"
   >
   </app-board-preview>
 </div>
