--- a/project-management-app/src/app/auth/components/edit-profile/edit-profile.component.html
+++ b/project-management-app/src/app/auth/components/edit-profile/edit-profile.component.html
@@ -7,4 +7,5 @@
   ariaCurrentWhenActive="page"
 >
   <mat-icon aria-hidden="false" aria-label="person icon" fontIcon="person">person</mat-icon>
+  <span *ngIf="user$ | async as user">{{ user.name | slice: 0:1 | uppercase }}</span>
 </button>
