--- a/project-management-app/src/app/auth/components/login-form/login-form.component.html
+++ b/project-management-app/src/app/auth/components/login-form/login-form.component.html
@@ -1,4 +1,6 @@
+
 <div class="container">
+  <h2>Login</h2>
   <form (ngSubmit)="onSubmit(ngForm)" #ngForm="ngForm" [formGroup]="loginForm">
     <p>
       <mat-form-field>
