--- a/project-management-app/src/app/boards/components/create-board-button/create-board-button.component.html
+++ b/project-management-app/src/app/boards/components/create-board-button/create-board-button.component.html
@@ -8,6 +8,7 @@
   ariaCurrentWhenActive="page"
   (click)="openDialog()"
   [disabled]="!(isLoggedIn$ | async)"
+  type="button"
 >
   <mat-icon aria-hidden="false" aria-label="create_new_folder icon" fontIcon="create_new_folder"
     >create_new_folder</mat-icon
