--- a/project-management-app/src/app/tasks/components/columns-list/columns-list.component.html
+++ b/project-management-app/src/app/tasks/components/columns-list/columns-list.component.html
@@ -1,9 +1,17 @@
-<div class="columns-list">
+<div
+  class="columns-list"
+  cdkDropList
+  cdkDropListOrientation="horizontal"
+  (cdkDropListDropped)="drop($event)"
+  cdkDropListGroup
+>
   <app-column-item
     *ngFor="let column of columnsList"
     [column]="column"
     [board]="board"
     (deleteColumn)="onDelete($event)"
+    cdkDrag
   >
   </app-column-item>
 </div>
+
