--- a/project-management-app/src/app/tasks/components/task-item/task-item.component.html
+++ b/project-management-app/src/app/tasks/components/task-item/task-item.component.html
@@ -1,10 +1,7 @@
 <mat-card *ngIf="task">
   <div [class]="'task-item'">
     <h2>{{ task.title }}</h2>
-    <!-- <h4>BoardId: {{ column.boardId }}</h4> -->
-    <!-- <div>
-      <h4>Order of Column: {{ column.order }}</h4>
-    </div> -->
+    <h4>Order of Task: {{ task.order }}</h4>
     <h4>Id: {{ task._id }}</h4>
   </div>
   <button type="button" class="delete" title="delete task" (click)="onDelete()">x</button>
