--- a/project-management-app/src/app/tasks/components/tasks-list/tasks-list.component.html
+++ b/project-management-app/src/app/tasks/components/tasks-list/tasks-list.component.html
@@ -1,8 +1,19 @@
-<div class="tasks-list">
-  <app-task-item
-    *ngFor="let task of tasksList"
-    [task]="task"
-    (deleteTask)="onDelete($event)"
+<div class="tasks-box">
+  <div
+    *ngIf="tasksList"
+    class="tasks-list"
+    cdkDropList
+    [cdkDropListData]="tasksList"
+    cdkDropListOrientation="vertical"
+    (cdkDropListDropped)="drop($event)"
   >
-  </app-task-item>
+    <app-task-item
+      [tasksList]="tasksList"
+      *ngFor="let task of tasksList"
+      [task]="task"
+      (deleteTask)="onDelete($event)"
+      cdkDrag
+    >
+    </app-task-item>
+  </div>
 </div>
