--- a/project-management-app/src/app/tasks/components/tasks-list/tasks-list.component.html
+++ b/project-management-app/src/app/tasks/components/tasks-list/tasks-list.component.html
@@ -12,6 +12,7 @@
       *ngFor="let task of tasksList"
       [task]="task"
       (deleteTask)="onDelete($event)"
+      (editTask)="onEdit($event)"
       cdkDrag
     >
     </app-task-item>
