--- a/project-management-app/src/app/boards/components/board-preview/board-preview.component.scss
+++ b/project-management-app/src/app/boards/components/board-preview/board-preview.component.scss
@@ -1,3 +1,45 @@
-.board-preview {
+.card-container {
+  width: 90%;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  &__inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+    &__heading {
+      padding: 0;
+      margin: 0;
+      display: inline-block;
+      width: 280px;
+      font-size: 20px;
+    }
+  }
+}
+
+.ripple-container {
+  padding: 20px;
   width: 300px;
+  height: 90%;
+  cursor: pointer;
+  margin: 0;
+}
+
+.hidden-overflow {
+  height: 1.2rm;
+  width: 80%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+mat-chip {
+  min-height: 30px;
 }
