--- a/project-management-app/src/app/tasks/pages/board-item-page/board-item-page.component.html
+++ b/project-management-app/src/app/tasks/pages/board-item-page/board-item-page.component.html
@@ -1,40 +1,10 @@
 <div class="container">
-  <div *ngIf="board"></div>
-  <app-create-column-button [board]="board"></app-create-column-button>
-
-  <app-columns-list
-    [columnsList]="sortedColumnsList"
-    [board]="board"
-    (deleteColumn)="openDialog($event)"
-  ></app-columns-list>
-</div>
-
-<!-- <div class="example-container">
-  <h2>To do</h2>
-
-  <div
-    cdkDropList
-    #todoList="cdkDropList"
-    [cdkDropListData]="todo"
-    [cdkDropListConnectedTo]="[doneList]"
-    class="example-list"
-    (cdkDropListDropped)="drop($event)"
-  >
-    <div class="example-box" *ngFor="let item of todo" cdkDrag>{{ item }}</div>
+  <div *ngIf="board" class="columns-container">
+    <app-columns-list
+      [columnsList]="sortedColumnsList"
+      [board]="board"
+      (deleteColumn)="openDialog($event)"
+    ></app-columns-list>
+    <app-create-column-button [board]="board"></app-create-column-button>
   </div>
 </div>
-
-<div class="example-container">
-  <h2>Done</h2>
-
-  <div
-    cdkDropList
-    #doneList="cdkDropList"
-    [cdkDropListData]="done"
-    [cdkDropListConnectedTo]="[todoList]"
-    class="example-list"
-    (cdkDropListDropped)="drop($event)"
-  >
-    <div class="example-box" *ngFor="let item of done" cdkDrag>{{ item }}</div>
-  </div>
-</div> -->
