--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -49,8 +49,10 @@ ul {
   list-style-type: none;
 }
 
-a {
+a,
+a:visited {
   text-decoration: none;
+  color: inherit;
 }
 
 .container {
@@ -61,4 +63,43 @@ a {
   justify-content: center;
   align-items: center;
   min-height: calc(100vh - 128px);
+}
+
+.columns-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.card-container {
+  width: 90%;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  &__inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+    &__heading {
+      padding: 0;
+      margin: 0;
+      display: inline-block;
+      width: 280px;
+      font-size: 20px;
+    }
+  }
+}
+
+.ripple-container {
+  padding: 20px;
+  width: 300px;
+  height: 90%;
+  cursor: pointer;
+  margin: 0;
 }
