--- a/project-management-app/src/app/tasks/components/create-column-button/create-column-button.component.html
+++ b/project-management-app/src/app/tasks/components/create-column-button/create-column-button.component.html
@@ -3,7 +3,7 @@
   class="button button-ripple"
   type="button"
   (click)="openDialog()"
-  mat-raised-button
+  mat-stroked-button
   color="primary"
 >
   <mat-icon>add_circle</mat-icon>
