--- a/project-management-app/src/app/tasks/components/create-column-button/create-column-button.component.scss
+++ b/project-management-app/src/app/tasks/components/create-column-button/create-column-button.component.scss
@@ -1,7 +1,7 @@
 .button-ripple {
-  width: 200px;
-  height: 100px;
-  line-height: 100px;
+  width: 150px;
+  height: 60px;
+  border: none;
 
   user-select: none;
   -webkit-user-select: none;
