--- a/project-management-app/src/app/tasks/components/tasks-list/tasks-list.component.html
+++ b/project-management-app/src/app/tasks/components/tasks-list/tasks-list.component.html
@@ -16,5 +16,6 @@
       cdkDrag
     >
     </app-task-item>
+    <app-create-task-button [column]="column" [board]="board"></app-create-task-button>
   </div>
 </div>
