--- a/project-management-app/src/app/boards/components/board-view/board-view.component.scss
+++ b/project-management-app/src/app/boards/components/board-view/board-view.component.scss
@@ -1,12 +1,14 @@
 .card-container {
   width: 100%;
-  height: 60px;
+  height: 100px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
+  background-color: #dde2ed;
+  margin-bottom: 20px;
 
   &__inner {
     display: flex;
@@ -28,6 +30,5 @@
   padding: 20px;
   width: 300px;
   height: 90%;
-  cursor: pointer;
   margin: 0;
 }
