--- a/project-management-app/src/app/boards/components/boards-list/boards-list.component.scss
+++ b/project-management-app/src/app/boards/components/boards-list/boards-list.component.scss
@@ -1,6 +1,33 @@
 .boards-list {
-  display:flex;
+  display: flex;
   flex-direction: column;
   gap: 20px;
   flex-wrap: wrap;
+}
+
+.title-container {
+  width: 100%;
+  height: 100px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  background-color: #dde2ed;
+  margin-bottom: 20px;
+
+  &__inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+    &__heading {
+      padding: 0;
+      margin: 0;
+      display: inline-block;
+      font-size: 20px;
+    }
+  }
 }
