--- a/project-management-app/src/app/boards/pages/boards-page/boards-page.component.html
+++ b/project-management-app/src/app/boards/pages/boards-page/boards-page.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<!-- <div class="container"> -->
   <app-boards-list
     [user]="user$ | async"
     [users]="usersList$ | async"
     [boardsList]="boardsList$ | async"
     (deleteBoard)="openDialog($event)"
   ></app-boards-list>
-</div>
+<!-- </div> -->
