--- a/project-management-app/src/app/core/components/header/header.component.scss
+++ b/project-management-app/src/app/core/components/header/header.component.scss
@@ -4,7 +4,9 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  height: 80px;
+  box-sizing: border-box;
+  // padding: 10px;
 
   &__logo-link {
     display: flex;
@@ -31,7 +33,6 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
-    // margin-right: 130px;
   }
 
   &__user-block {
