--- a/project-management-app/src/app/tasks/components/column-item/column-item.component.scss
+++ b/project-management-app/src/app/tasks/components/column-item/column-item.component.scss
@@ -1,44 +1,95 @@
+.column-wrapper {
+  width: 300px;
+  cursor: pointer;
+  border-radius: 2px;
+  overflow: hidden;
+  border-radius: 7px;
+  // border: 1px solid darken(#e0e0e0, 30);
+  border: none;
+  margin: 2px;
+}
+
+.container-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 20px;
+}
+
 .column-item {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  height: 100px;
+  flex-wrap: nowrap;
+  gap: 0px;
+  height: 60px;
   padding: 0;
-  margin: 0;
+  margin: 0px;
+  width: 100%;
+  background-color: darken(#e0e0e0, 60);
+  color: white;
+  border-radius: 7px;
+  // border: 1px solid darken(#e0e0e0, 30);
+  border: none;
+  overflow: hidden;
 }
 
 .card-container {
-  width: 90%;
   height: 60px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   cursor: pointer;
+  padding: 0;
+  margin: 0;
 
   &__inner {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    padding: 0;
+    margin: 0;
 
     &__heading {
       padding: 0;
       margin: 0;
-      display: inline-block;
-      width: 250px;
+      display: center;
+      max-width: 200px;
       font-size: 16px;
-      height: 20px;
     }
   }
 }
 
 .ripple-container {
   padding: 20px;
-  width: 250px;
-
   cursor: pointer;
   margin: 0;
+}
+
+.formForTitle {
+  padding: 0;
+  margin: 0;
+  max-width: 180px;
+  font-size: 14px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
+  &__textarea {
+    max-width: 120px;
+    padding: 0;
+    margin: 0;
+    height: 16px;
+  }
+  & button,
+  & icon {
+    margin: 0;
+    padding: 0;
+  }
 }
