--- a/project-management-app/src/app/tasks/components/tasks-list/tasks-list.component.scss
+++ b/project-management-app/src/app/tasks/components/tasks-list/tasks-list.component.scss
@@ -22,18 +22,36 @@
 }
 
 .tasks-box {
-  width: 370px;
-  max-width: 100%;
-  margin: 25px 0 0 25px;
-  display: inline-block;
+  width: 100%;
+  margin: 0;
   vertical-align: top;
+  overflow: hidden;
 }
 
 .tasks-list {
   border: solid 1px #ccc;
-  min-height: 360px;
-  background: white;
+  height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background-color: lighten(#d9dde3, 10);
   border-radius: 4px;
-  overflow: hidden;
   display: block;
+}
+
+.tasks-list::-webkit-scrollbar {
+  width: 10px;
+}
+
+.tasks-list::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(45, 46, 51);
+  border-radius: 10px;
+}
+
+.tasks-list::-webkit-scrollbar-thumb {
+  background: rgb(146, 153, 163);
+  border-radius: 10px;
+}
+
+.tasks-list::-webkit-scrollbar-thumb:hover {
+  background: darken(rgb(146, 153, 163), 20);
 }
