--- a/project-management-app/src/app/tasks/pages/board-item-page/board-item-page.component.scss
+++ b/project-management-app/src/app/tasks/pages/board-item-page/board-item-page.component.scss
@@ -1,1 +1,27 @@
+.columns-container {
+  width: 90vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  overflow-x: auto;
+  margin-bottom: 20px;
+}
 
+.columns-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.columns-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(45, 46, 51);
+  border-radius: 15px;
+}
+
+.columns-container::-webkit-scrollbar-thumb {
+  background: rgb(146, 153, 163);
+  border-radius: 10px;
+}
+
+.columns-container::-webkit-scrollbar-thumb:hover {
+  background: darken(rgb(146, 153, 163), 20);
+}
