--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -12,6 +12,7 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $project-management-app-primary: mat.define-palette(mat.$indigo-palette);
+$project-management-app-secondary: mat.define-palette(mat.$blue-gray-palette);
 $project-management-app-accent: mat.define-palette(mat.$yellow-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
@@ -23,6 +24,7 @@ $project-management-app-theme: mat.define-light-theme(
   (
     color: (
       primary: $project-management-app-primary,
+      secondary: $project-management-app-secondary,
       accent: $project-management-app-accent,
       warn: $project-management-app-warn,
     ),
@@ -39,6 +41,8 @@ $project-management-app-theme: mat.define-light-theme(
 html,
 body {
   height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 body {
   margin: 0;
@@ -59,47 +63,11 @@ a:visited {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width: 1200px;
-  justify-content: center;
+  // max-width: 80vw;
+  justify-content: baseline;
   align-items: center;
-  min-height: calc(100vh - 128px);
-}
-
-.columns-container {
-  display: flex;
-  flex-direction: row;
-}
-
-.card-container {
-  width: 90%;
-  height: 60px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-
-  &__inner {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-
-    &__heading {
-      padding: 0;
-      margin: 0;
-      display: inline-block;
-      width: 280px;
-      font-size: 20px;
-    }
-  }
-}
-
-.ripple-container {
-  padding: 20px;
-  width: 300px;
-  height: 90%;
-  cursor: pointer;
-  margin: 0;
+  min-height: calc(100vh - 260px);
+  justify-content: flex-start;
+  height: max-content;
+  overflow-x: hidden;
 }
